--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.chludwig.websec</groupId>
     <artifactId>BBCode</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <version>1.2-SNAPSHOT</version>
     <name>BBCode</name>
     <description>WebSec Vulnerable BBCode Web Application</description>
@@ -41,11 +41,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
